[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

members = [
    "set1",
]

[dependencies]
base64 = "0.13.0"
hex = "0.4.3"
rustc-serialize = "0.3"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"